@@ -73,7 +73,11 @@ reasonably complete.
 
 Missing features:
 =================
-- MHD_get_daemon_info is not implemented
+- MHD_get_daemon_info is not implemented (always returns NULL)
+- SSL support does not work with SELECT-based threading modes
+  (issue is that the gnutls state machine does not like EAGAIN/EINTR
+   return values from send/recv, despite having tons of
+   branches on those values).
 - SSL code is still too large:
   * libgcrypt is used, and is also bloated
   => integrate required portions of libgcrypt into our tree
