@@ -309,7 +309,7 @@ enum MHD_CONNECTION_STATE
 
   MHD_TLS_HANDSHAKE_FAILED,
 
-  MHD_TLS_HANDSHAKE_COMPLETE,
+  MHD_TLS_HANDSHAKE_COMPLETE
 
 };
 
